--- a/praca.tex
+++ b/praca.tex
@@ -62,6 +62,7 @@ Large graphs processing, Declarative query languages, Computations on large data
 \newcommand{\datalogneg}{Datalog$^{\neg}$ }
 \newcommand{\aggfun}{\textit{aggfun} }
 \newcommand{\aggcol}{\textit{aggcol} }
+\newcommand{\assign}{:-}
 
 \def\changemargin#1#2{\list{}{\rightmargin#2\leftmargin#1}\item[]}
 \let\endchangemargin=\endlist 
@@ -194,8 +195,8 @@ Before we formally define Datalog syntax and semantics, let us take a look at an
 As before, let us assume that the database contains a relation $\textsc{Edge}$ representing a graph and $\textsc{Edge}(a, b)$ means that there is an edge between vertices $a$ and $b$. The following program computes relation $\textsc{Tc}$ containing a transitive closure of relation $\textsc{Edge}$.
 
 \dprog{}{
-  & \textsc{Tc} (a, b) &&  & :- & && \textsc{Edge} (a, b). & \\
-  & \textsc{Tc} (a, b) &&  & :- & && \textsc{Tc} (a, c), \textsc{Edge}(c, b). &\\
+  & \textsc{Tc} (a, b) &&  & \assign & && \textsc{Edge} (a, b). & \\
+  & \textsc{Tc} (a, b) &&  & \assign & && \textsc{Tc} (a, c), \textsc{Edge}(c, b). &\\
 }{Datalog query for computing transitive closure of a graph}{ex:tcdatalog}
 
 This program contains two rules. The first one states that if there is an edge between $a$ and $b$, then also there is such edge in the transitive closure. The second rule says that if there is a connection in the transitive closure between $a$ and some $c$ and at the same time there is an edge between $c$ and $b$ in the original graph, then there also exists a connection in transitive closure between $a$ and $b$. This is where recursion is used: $\textsc{Tc}$ appears on both sides of the second rule.
@@ -239,11 +240,11 @@ Let us formally Datalog programs and rules.
 
 \begin{defn}
 A \emph{rule} is an expression of the form:
-$$ \textsc{R}(x) :- R_1(x_1), \dots, R_n(x_n). $$
+$$ \textsc{R}(x) \assign R_1(x_1), \dots, R_n(x_n). $$
 where $n \ge 1$, $R, R_1, \dots, R_n$ are names of relations and $x, x_1, \dots x_n$ are tuples of free variables or constants. Each tuple $x, x_1, \dots x_n$ must have the same arity as the corresponding relation.
 \end{defn}\label{d:datalogrule}
 
-The sign $:-$ splits the rule into two parts: the leftmost part, i.e. $R(x)$ is called the \emph{head} of the rule, while the rightmost part, i.e. $R_1(x_1), \dots, R_n(x_n)$ is called the \emph{body} of the rule. The elements of body separated by commas are called \emph{subgoals}. Head and the subgoals are called \emph{atoms}. Each atom consists of a \emph{predicate}, i.e. the relation name and \emph{arguments}.
+The sign $\assign$ splits the rule into two parts: the leftmost part, i.e. $R(x)$ is called the \emph{head} of the rule, while the rightmost part, i.e. $R_1(x_1), \dots, R_n(x_n)$ is called the \emph{body} of the rule. The elements of body separated by commas are called \emph{subgoals}. Head and the subgoals are called \emph{atoms}. Each atom consists of a \emph{predicate}, i.e. the relation name and \emph{arguments}.
 
 \begin{defn}
 A rule is \emph{safe} if the each free variable appearing in its head also appears in at least one of the subgoals.
@@ -270,18 +271,18 @@ The set of extensional relations are called the \emph{edb} or \emph{extensional 
 A Datalog program is essentially a function from database instances over $edb(P)$ into database instances over $idb(P)$.
 
 \begin{defn}
-Given a rule $ \textsc{R}(x) :- R_1(x_1), \dots, R_n(x_n). $, if $\nu$ is a valuation of variables appearing in this rule, then we obtain an \emph{instantiation} of this rule by replacing each variable $t$ in the rule by its value $\nu(t)$:
-$$ \textsc{R}(\nu(x)) :- R_1(\nu(x_1)), \dots, R_n(\nu(x_n)). $$
+Given a rule $ \textsc{R}(x) \assign R_1(x_1), \dots, R_n(x_n). $, if $\nu$ is a valuation of variables appearing in this rule, then we obtain an \emph{instantiation} of this rule by replacing each variable $t$ in the rule by its value $\nu(t)$:
+$$ \textsc{R}(\nu(x)) \assign R_1(\nu(x_1)), \dots, R_n(\nu(x_n)). $$
 \end{defn}
 
 \begin{exmp}
 As an example, let us consider the following program $P$:
 
 \rdprog{}{
-  & \textsc{Mother} (parent, child) &&  & :- & && \textsc{Parent}(parent, child), \textsc{Woman}(parent) & \\
-  & \textsc{Father} (parent, child) &&  & :- & && \textsc{Parent}(parent, child), \textsc{Man}(parent) & \\
-  & \textsc{Ancestor} (ancestor, child) &&  & :- & && \textsc{Parent} (ancestor, child) &\\
-  & \textsc{Ancestor} (ancestor, child) &&  & :- & && \textsc{Ancestor} (ancestor, parent), \textsc{Parent} (parent, child) &\\
+  & \textsc{Mother} (parent, child) &&  & \assign & && \textsc{Parent}(parent, child), \textsc{Woman}(parent) & \\
+  & \textsc{Father} (parent, child) &&  & \assign & && \textsc{Parent}(parent, child), \textsc{Man}(parent) & \\
+  & \textsc{Ancestor} (ancestor, child) &&  & \assign & && \textsc{Parent} (ancestor, child) &\\
+  & \textsc{Ancestor} (ancestor, child) &&  & \assign & && \textsc{Ancestor} (ancestor, parent), \textsc{Parent} (parent, child) &\\
 }{}{}
 
 Assuming that \relat{Parent}{(p, c)} means that $p$ is $c$'s parent and \relat{Woman}{(x)} and \relat{Man}{(x)} tell whether person $x$ is a woman or a man, this program computes child's father, mother and all its ancestors that can be derived.
@@ -295,7 +296,7 @@ idb(P) =& \{\textsc{Mother}, \textsc{Father}, \textsc{Ancestor}\}
 \relat{Parent}{}, \relat{Man}{}, \relat{Man}{} are \emph{edb} relations, because there are no rules for those relations. All of their contents must be provided as an input. On the other hand, \relat{Mother}{}, \relat{Father}{}, \relat{Ancestor}{} are \emph{idb} relations, since there are rules for computing them. Only one of them, \relat{Ancestor}{} is recursively defined.
 
 If $Anna, Chris, Patrick$ are some values in the domain, an example of an instantiation of the last rule is:
-$$\textsc{Ancestor}(Anna, Chris) :- \textsc{Ancestor} (Anna, Patrick), \textsc{Parent} (Patrick, Chris)$$
+$$\textsc{Ancestor}(Anna, Chris) \assign \textsc{Ancestor} (Anna, Patrick), \textsc{Parent} (Patrick, Chris)$$
 \end{exmp}
 
 \subsection{Differences between Datalog and Prolog}
@@ -322,7 +323,7 @@ In this section we show the fix-point semantics for Datalog programs. A central 
 
 Given a Datalog program $P$, let $\textbf{K}$ be a database instance over $sch(P)$.
 
-We say that a fact $R(v)$ is an \emph{immediate consequence} for $\textbf{K}$ and $P$ if $R(v) \in \textbf{K}$ or there exists an instantiation $R(v) :- R_1(v_1), \dots, R_n(v_n)$ of a rule in $P$ such that $R_i(v_i) \in \textbf{K}$ for each $i = 1\dots n$.
+We say that a fact $R(v)$ is an \emph{immediate consequence} for $\textbf{K}$ and $P$ if $R(v) \in \textbf{K}$ or there exists an instantiation $R(v) \assign R_1(v_1), \dots, R_n(v_n)$ of a rule in $P$ such that $R_i(v_i) \in \textbf{K}$ for each $i = 1\dots n$.
 
 The \emph{immediate consequence operator} for a Datalog program $P$ is a function $T_P: inst(sch(P)) \to inst(sch(P))$:
 $$T_P(\textbf{K}) = \{ F: F \text{ is a fact over } sch(P) \text{ and $F$ is an immediate consequence for } \textbf{K} \text{ and } P \}$$
@@ -332,7 +333,7 @@ Operator $T_P$ for any Datalog program $P$ is a monotone function.
 \end{lem}
 \emph{Proof.} Given any $\textbf{I}, \textbf{J} \in inst(sch(P))$ such that $\textbf{I} \subseteq \textbf{J}$, let $F$ be a fact in $T_P(\textbf{I})$.
 By definition, $F$ is an immediate consequence of $\textbf{I}$, so either $F$ is in $\textbf{I}$ or it there exists an instantiation
- $F :- F_1, \dots, F_n$ of a rule in $P$ such that $F_i \in \textbf{I}$ for each $i = 1\dots n$. 
+ $F \assign F_1, \dots, F_n$ of a rule in $P$ such that $F_i \in \textbf{I}$ for each $i = 1\dots n$. 
 In the first case $F \in \textbf{I} \subseteq \textbf{J}$, so $F \in \textbf{J}$. 
 In the second case, each $F_i \in \textbf{I} \subseteq \textbf{J}$, so the instantiation also exists in $\textbf{J}$. 
 Hence, $F$ is also an immediate consequence of $\textbf{J}$, and thus $F \in T_P(\textbf{J})$. 
@@ -356,10 +357,10 @@ We will now prove that this is the minimum fix-point of $T_P$ containing $\textb
 Let us recall the example program $P$ from the previous section:
 
 \rdprog{}{
-  & \textsc{Mother} (parent, child) &&  & :- & && \textsc{Parent}(parent, child), \textsc{Woman}(parent) & \\
-  & \textsc{Father} (parent, child) &&  & :- & && \textsc{Parent}(parent, child), \textsc{Man}(parent) & \\
-  & \textsc{Ancestor} (ancestor, child) &&  & :- & && \textsc{Parent} (ancestor, child) &\\
-  & \textsc{Ancestor} (ancestor, child) &&  & :- & && \textsc{Ancestor} (ancestor, parent), \textsc{Parent} (parent, child) &\\
+  & \textsc{Mother} (parent, child) &&  & \assign & && \textsc{Parent}(parent, child), \textsc{Woman}(parent) & \\
+  & \textsc{Father} (parent, child) &&  & \assign & && \textsc{Parent}(parent, child), \textsc{Man}(parent) & \\
+  & \textsc{Ancestor} (ancestor, child) &&  & \assign & && \textsc{Parent} (ancestor, child) &\\
+  & \textsc{Ancestor} (ancestor, child) &&  & \assign & && \textsc{Ancestor} (ancestor, parent), \textsc{Parent} (parent, child) &\\
 }{}{}
 
 Given the following \emph{edb} database instance \textbf{K}:
@@ -458,23 +459,27 @@ $\}$
 \begin{exmp}
 As an example, let us consider the following program, which computes a transitive closure of a binary relation \relat{R}{}:
 \begin{align}
-\textsc{Tc}(x, y) &:-& \textsc{R}(x, y).
-\textsc{Tc}(x, y) &:-& \textsc{Tc}(x, z), \textsc{Tc}(z, y).
+\textsc{Tc}(x, y) &\assign \textsc{R}(x, y).\\
+\textsc{Tc}(x, y) &\assign \textsc{Tc}(x, z), \textsc{Tc}(z, y).
 \end{align}
 
-Given $K = \{\textsc{R}(1, 2), \textsc{R}(2, 3), \textsc{R}(3, 4), \textsc{R}(2, 5)\}$, the values produced in subsequent iterations are:
+Given $K = \{\textsc{R}(1, 2), \textsc{R}(2, 3), \textsc{R}(3, 4), \textsc{R}(4, 5)\}$, the values produced in subsequent iterations are:
 
-$$I_1 \leftarrow \{\textsc{R}(1, 2), \textsc{R}(2, 3), \textsc{R}(3, 4), \textsc{R}(2, 5), \textsc{Tc}(1, 2), \textsc{Tc}(2, 3), \textsc{Tc}(3, 4), \textsc{Tc}(2, 5)\}$$
-$$I_2 \leftarrow \{\textsc{R}(1, 2), \textsc{R}(2, 3), \textsc{R}(3, 4), \textsc{R}(2, 5), \textsc{Tc}(1, 2), \textsc{Tc}(2, 3), \textsc{Tc}(3, 4), \textsc{Tc}(2, 5), \textsc{Tc}(1, 3), \textsc{Tc}(2, 4), \textsc{Tc}(1, 5)\}$$
-$$I_3 \leftarrow \{\textsc{R}(1, 2), \textsc{R}(2, 3), \textsc{R}(3, 4), \textsc{R}(2, 5), \textsc{Tc}(1, 2), \textsc{Tc}(2, 3), \textsc{Tc}(3, 4), \textsc{Tc}(2, 5), \textsc{Tc}(1, 3), \textsc{Tc}(2, 4), \textsc{Tc}(1, 5), \textsc{Tc}(1, 4)\}$$
+\begin{align*}
+I_1 \leftarrow \{&\textsc{R}(1, 2), \textsc{R}(2, 3), \textsc{R}(3, 4), \textsc{R}(2, 5), \textsc{Tc}(1, 2), \textsc{Tc}(2, 3), \textsc{Tc}(3, 4), \textsc{Tc}(4, 5)\}\\
+I_2 \leftarrow \{&\textsc{R}(1, 2), \textsc{R}(2, 3), \textsc{R}(3, 4), \textsc{R}(2, 5), \textsc{Tc}(1, 2), \textsc{Tc}(2, 3), \textsc{Tc}(3, 4), \textsc{Tc}(4, 5), \\
+&\textsc{Tc}(1, 3), \textsc{Tc}(2, 4), \textsc{Tc}(3, 5)\}\\
+I_3 \leftarrow \{&\textsc{R}(1, 2), \textsc{R}(2, 3), \textsc{R}(3, 4), \textsc{R}(2, 5), \textsc{Tc}(1, 2), \textsc{Tc}(2, 3), \textsc{Tc}(3, 4), \textsc{Tc}(4, 5),\\
+& \textsc{Tc}(1, 3), \textsc{Tc}(2, 4), \textsc{Tc}(3, 5), \textsc{Tc}(1, 4), \textsc{Tc}(2, 5)\}, \textsc{Tc}(1, 5)\}\\
+\end{align*}
 \end{exmp}\label{ex:naiveeval}
 
 \subsection{Semi-Naive evaluation}
-Example \ref{ex:naiveeval} shows that evaluation that strictly follows the fix-point semantics definition may be inefficient. Most of the facts is computed more than once.
+A straightforward implementation of $T_P$ definition is to perform a natural join on subgoal relations and a projection to head variables. Example \ref{ex:naiveeval} shows that such implementation may be inefficient, because most of the facts is computed more than once.
 
-\emph{Semi-naive evaluation} is the most basic optimization used in Datalog evaluation. It comes from the following observation: in a Datalog program, if some rule $Q$ produced a fact $R(t)$ based on database instance $I_i$ in the $i$-th iteration of the naive evaluation algorithm, then this rule with produce this fact in each subsequent iteration, because $I_j \supseteq I_i$ for $j > i$. The goal of this optimization is to avoid those computations after producing the fact for the first time. This is achieved by joining only subgoals in the body of each rule which have at least one new answer produced in the previous iteration.
+\emph{Semi-naive evaluation} is the most basic optimization used in Datalog evaluation, which computes $T_P$ in a different way. It comes from the following observation: in a Datalog program, if some rule $Q$ produced a fact $R(t)$ based on database instance $I_i$ in the $i$-th iteration of the naive evaluation algorithm, then this rule with produce this fact in each subsequent iteration, because $I_j \supseteq I_i$ for $j > i$. The goal of this optimization is to avoid those computations after producing the fact for the first time. This is achieved by joining only subgoals in the body of each rule which have at least one new answer produced in the previous iteration. 
 
-Let $T^\Delta_P$ denote a function that evaluates rules of program $P$ so that at least one new fact, i. e. inferred in the previous iteration, is used in application of a rule. This function needs to know which facts are the new ones, so it takes two arguments: $I$, the full database instance and $\Delta$, a database instance containing the facts that were added in the last iteration. Note that this function does not necessarily return facts from $I$, so we will need to add them to the facts newly computed. The following code presents the algorithm for semi-naive evaluation: 
+Let $T^\Delta_P$ denote a function that evaluates rules of program $P$ so that at least one new fact is used in application of a rule. This function needs to know which facts are the new ones, so it takes two arguments: $I$, the full database instance and $\Delta$, a database instance containing the facts that were added in the last iteration. Note that this function does not necessarily return facts from $I$, so we will need to add them to the facts newly computed to get the same result as $T_P$: $T_P(I_i) = I_i \cup T_P^\Delta(I_i, \Delta_i)$ for each $i$. The following code presents the algorithm for semi-naive evaluation: 
 
 
 \parbox{0.5\textwidth}{
@@ -515,15 +520,22 @@ $\}$
 \begin{exmp}
 Let us consider the program and input from Example \ref{ex:naiveeval}. The facts computed by the Semi-naive evaluation in subsequent iterations would be:
 
-$$C_1 \leftarrow \{\textsc{Tc}(1, 2), \textsc{Tc}(2, 3), \textsc{Tc}(3, 4), \textsc{Tc}(2, 5)\}$$
-$$C_2 \leftarrow \{\textsc{Tc}(1, 3), \textsc{Tc}(2, 4), \textsc{Tc}(1, 5)\}$$
-$$C_3 \leftarrow \{\textsc{Tc}(1, 4)\}$$
-\end{exmp}\label{ex:naiveeval}
+$$C_1 \leftarrow \{\textsc{Tc}(1, 2), \textsc{Tc}(2, 3), \textsc{Tc}(3, 4), \textsc{Tc}(4, 5)\}$$
+$$C_2 \leftarrow \{\textsc{Tc}(1, 3), \textsc{Tc}(2, 4), \textsc{Tc}(3, 5)\}$$
+$$C_3 \leftarrow \{\textsc{Tc}(1, 4), \textsc{Tc}(2, 5), \textsc{Tc}(1, 5)\}$$
+$$C_3 \leftarrow \{\textsc{Tc}(1, 5)\}$$
+\end{exmp}\label{ex:semieval}
 
-Semi-naive evaluation does assure that each fact will be computed once, but it eliminates a significant portion of redundant computation.
+Semi-naive evaluation does assure that each fact will be computed once, e.g. \relat{Tc}(1, 5) was computed more than once, but it eliminates a significant portion of redundant computation.
 
 \subsection{Other strategies}
-\todo{Bottom-up, top-down, Magic sets, subsumptive queries.}
+Naive evaluation and semi-naive evaluation are examples of the bottom-up approach, where we start with the initial database instance and gradually extend it with facts that can be inferred until a fix-point is reached.
+
+An opposite approach is possible as well. In top-down evaluation which originates in logic programs evaluation, we start with the query. For example, we would like to find all values of $x$, for which \relat{Tc}{(3, x)} is true. We can use the first rule: for \relat{Tc}{(3, x)} we would need \relat{R}{(3, x)}. The only such fact is \relat{R}{(3, 4)} for $x=4$. We can also use the second rule, which leaves us with finding $y$ such that \relat{Tc}{(3, y)}, which yields $y \in \{4\}$ by the first rule. Then we need find $x$ such that \relat{Tc}{(4, x)}, which by the first rule yields $x \in \{5\}$. The final result is thus $x \in \{4\}$
+
+An advantage of the top-down approach is that id does not have to compute the whole database. Instead, it computes only the facts actually necessary.
+
+This can be also achieved in bottom-up evaluation by using optimization techniques such as \emph{Magic sets} \cite{magicsets, fod} and \emph{Subsumptive queries} \cite{subsumptivequeries}. They involve transforming the relations and rules into a new program, which evaluation using the bottom-up approach essentially simulates evaluation using a top-down algorithm. Magic sets is a classical technique, while subsumptive queries is an example of a new development in the field, published in 2011.
 
 \section{Typical extensions}
 Despite recursion, pure Datalog's expressive power is still not enough for many practical applications. Datalog is often extended with:
@@ -566,7 +578,7 @@ Let us consider a following example. We have a database of employees consisting 
 
 The following query with arithmetic comparisons solves this problem:
 \begin{multline*}
-\textsc{EarnsMoreThanBoss} (employee) :- \\ \textsc{Boss}(boss, employee), \textsc{Salary}(boss, bs), \textsc{Salary}(employee, es), es > bs. \\
+\textsc{EarnsMoreThanBoss} (employee) \assign \\ \textsc{Boss}(boss, employee), \textsc{Salary}(boss, bs), \textsc{Salary}(employee, es), es > bs. \\
 \end{multline*}
 
 We can think of arithmetic comparisons as a new kind of predicates, which are infinite built-in relations. Since we introduced implicit infinite relations, we need to adjust the definition of rule safety \ref{d:datalogsaferule}:
@@ -609,8 +621,8 @@ what are the lengths of paths between $s$ and $v$?
 The following program answers this question using a straightforward rule of edge relaxation:
 
 \dprog{}{
-  & \textsc{Path} (v, d) &&  & :- & && \textsc{Edge}(s, v, d) & \\
-  & \textsc{Path} (v, d) &&  & :- & && \textsc{Path} (t, d'), \textsc{Edge}(t, v, l), d = d' + l. &\\
+  & \textsc{Path} (v, d) &&  & \assign & && \textsc{Edge}(s, v, d) & \\
+  & \textsc{Path} (v, d) &&  & \assign & && \textsc{Path} (t, d'), \textsc{Edge}(t, v, l), d = d' + l. &\\
 }{Datalog query for computing all path lengths from a given source}{ex:pathsdatalog}
 
 As we can see, arithmetic addition is crucial in this program -- it would not be possible to determine the possible path lengths without being able to generate new distance values. We can see that both rules satisfy the updated safety definition.
@@ -631,16 +643,20 @@ For any $P$ and an instance $\textbf{K}$ over $edb(P)$, if there exists $n \ge 0
 \emph{Proof.} See second part of the proof for Theorem \ref{t:datalogfixpointsem}.
 
 \subsection{Datalog with negation}
-Pure version of Datalog permits recursion, but provides no negation. \todo{maybe some example of a problem which needs negation}. There are several ways of adding negation to Datalog. One of the most prominent of them is the \emph{stratified semantics}, which we will present in this section. 
+Pure version of Datalog permits recursion, but provides no negation. Negation allows to answer queries such as "which pairs of the nodes in graph are not connected?". There are several ways of adding negation to Datalog. One of the most prominent of them is the \emph{stratified semantics}, which we will present in this section. 
 
 In Datalog with negation, or \datalogneg, each relational subgoal may be negated, i. e. preceded with the negation symbol $!$. The negated subgoals are called \emph{negative} subgoals, and the rest of the subgoals is called \emph{positive} subgoals. Arithmetic comparisons and assignments are not allowed to be negated.
 
-\todo{example}
+\begin{exmp}
+Let us consider the program for computing trasitive closure \relat{Tc}{} of a relation \relat{R}{} from example \ref{ex:naiveeval}. A following rule computes the pairs of nodes which are indirectly connected, i.e. are in \relat{Tc}{}, but not in \relat{R}{}:
+
+$$\textsc{Indirect}(x, y) \assign \textsc{R}(x, y),~!\textsc{Tc}(x, y).$$
+\end{exmp}
 
 When negative subgoals are permitted, we need to include them in the definition of rules safety. 
 
 \begin{defn}
-A rule in \datalogneg, arithmetic comparisons and arithmetic assignments is \emph{safe} if each free variable appearing in:
+A rule in \datalogneg with arithmetic comparisons and arithmetic assignments is \emph{safe} if each free variable appearing in:
 \begin{itemize}
 \item its head,
 \item any of the comparisons,
@@ -654,12 +670,11 @@ We will first consider a certain class of \datalogneg programs, called semi-posi
 
 \begin{defn}
 A \datalogneg program $P$ is \emph{semi-positive} if for each rule in $P$, all its negated subgoals are over $edb(P)$.
-\todo{example}
 \end{defn}
 
 For a semi-positive program, any relation used in a negative sense is an \emph{edb} relation, so it is constant during the evaluation of $P$. Negation could be eliminated from $P$ by introducing artificial negated \emph{edb} relations. Thus, semi-positive programs can be evaluated using the fix-point semantics just like positive Datalog programs.
 
-The situation is different when \emph{idb} relations are used in negative subgoals. Let us assume that we use the naive evaluation. In classical Datalog, all tuples added to the database during the evaluation remain there until its end. However, when negation is allowed, it is not true in general. Let us consider a program which has a rule with a negated subgoal $!R(u)$. Such rule might produce a tuple $t$ in iteration $i$ because some $t'$ is not in $R$ and thus $!R(t')$ is true. When $t'$ is added to relation $R$ in a subsequent iteration though, the rule can no longer produce $t$. Some versions of negation semantics in Datalog allow for removing tuples from relations during the evaluation \ref{fod}.
+The situation is different when \emph{idb} relations are used in negative subgoals. Let us assume that we use the naive evaluation. In classical Datalog, all tuples added to the database during the evaluation remain there until its end. However, when negation is allowed, it is not true in general. Let us consider a program which has a rule with a negated subgoal $!R(u)$. Such rule might produce a tuple $t$ in iteration $i$ because some $t'$ is not in $R$ and thus $!R(t')$ is true. When $t'$ is added to relation $R$ in a subsequent iteration though, the rule can no longer produce $t$. Some versions of negation semantics in Datalog allow for removing tuples from relations during the evaluation \cite{fod}.
 
 In stratified semantics, we do not allow tuples to be removed from relations. Consequently, the inflationary semantics of Datalog is preserved. To achieve that, we require that if there is a rule for computing relation $R_1$ that uses $R_2$ in a negated subgoal, then relation $R_2$ can be fully computed before evaluation of relation $R_1$. Intuitively, this order of computation is possible if there is no direct or indirect dependency on $R_1$ in any of the rules for $R_2$, i. e. $R_1$ and $R_2$ are not recursively dependent from each other. This is formalized this by the notion of strata.
 
@@ -689,7 +704,7 @@ $$P(\textbf{I}) = P_n(\dots, P_2(P_1(\textbf{I}))\dots)$$
 
 A program can have multiple stratifications, but it can be shown that $P(\textbf{I})$ does not depend on which of them is chosen.
 
-\todo{Może ilustracja precedence graph}
+\todo{Pomysł: tutaj można by dać ilustrację grafu zależności}
 
 \subsection{Datalog with non-recursive aggregation}\label{ss:datalognra}
 
@@ -726,9 +741,9 @@ A simple version of aggregation can be introduced in Datalog by allowing only to
 For an example, let us recall the program from example \ref{ex:pathsdatalog}, which computes for a given graph the lengths of all existing paths from source to other vertices. An interesting question in often what is the shortest path to each vertex. This question can be answered using aggregation, by computing the minimum of distances for each vertex: 
 
 \dprog{}{
-  & \textsc{Path} (v, d) &&  & :- & && \textsc{Edge}(s, v, d) & \\
-  & \textsc{Path} (v, d) &&  & :- & && \textsc{Path} (t, d'), \textsc{Edge}(t, v, l), d = d' + l. &\\
-  & \textsc{MinPath} (t, \textsc{Min}(d)) &&  & :- & && \textsc{Path} (t, d). &
+  & \textsc{Path} (v, d) &&  & \assign & && \textsc{Edge}(s, v, d) & \\
+  & \textsc{Path} (v, d) &&  & \assign & && \textsc{Path} (t, d'), \textsc{Edge}(t, v, l), d = d' + l. &\\
+  & \textsc{MinPath} (t, \textsc{Min}(d)) &&  & \assign & && \textsc{Path} (t, d). &
 }{Datalog query for computing all path lengths from a given source}{ex:pathsdatalogaggregate}
 
 In this example, there are two strata: \relat{Edge}{} is an \emph{edb} relation, \relat{Path}{} belongs to the first stratum and \relat{MinPath}{} belongs to the second stratum.
@@ -835,9 +850,9 @@ A straightforward Datalog program for computing single source shortest paths (st
 trzeba wyjaśnić że to już jest rozszerzenie a teraz tylko chodzi o sposób wyliczania i zapętlanie}
 
 \dprog{}{
-  & \textsc{Path} (t, d) &&  & :- & && \textsc{Edge} (1, t, d). & \\
-  & \textsc{Path} (t, d) &&  & :- & && \textsc{Path} (s, d_1), \textsc{Edge} (s, t, d_2), d = d_1 + d_2. & \\
-  & \textsc{MinPath} (t, \textsc{Min}(d)) &&  & :- & && \textsc{Path} (t, d). &
+  & \textsc{Path} (t, d) &&  & \assign & && \textsc{Edge} (1, t, d). & \\
+  & \textsc{Path} (t, d) &&  & \assign & && \textsc{Path} (s, d_1), \textsc{Edge} (s, t, d_2), d = d_1 + d_2. & \\
+  & \textsc{MinPath} (t, \textsc{Min}(d)) &&  & \assign & && \textsc{Path} (t, d). &
 }{Datalog query for computing shortest paths from node 1 to other nodes}{ex:ssspdatalog}
 
 \datalogra allows aggregation to be combined with recursion under some conditions. This allows us to write straightforward programs for such problems, which finish execution in finite time and often are much more efficient than Datalog programs. An example \datalogra program that computes single source shortest paths is presented below. The relation $\textsc{Path}$ is declared so that for each \textit{target} the values in \textit{dist} column are aggregated using minimum operator.
@@ -848,7 +863,7 @@ trzeba wyjaśnić że to już jest rozszerzenie a teraz tylko chodzi o sposób w
   $\textsc{Path}(\text{int } \textit{target}, \text{int } \textit{dist} \text{ aggregate } \textsc{Min}) $
 }{
   & \textsc{Path} (1, 0). &&  & & &&  & \\
-  & \textsc{Path} (t, d) &&  & :- & && \textsc{Path} (s, d_1), \textsc{Edge} (s, t, d_2), d = d_1 + d_2. &
+  & \textsc{Path} (t, d) &&  & \assign & && \textsc{Path} (s, d_1), \textsc{Edge} (s, t, d_2), d = d_1 + d_2. &
 }{SociaLite query for computing shortest paths from node 1 to other nodes}{ex:ssspsocialite}
 
 While being very useful, recursive aggregation rules not always have an unambiguous solution. This is the case only under some conditions on the rules and the aggregation function itself.
@@ -893,12 +908,12 @@ Syntactically, we require that each relation is declared at the top of the progr
   $\textsc{P}(\text{int } \textit{a}, \text{int } \textit{b} \text{ aggregate } \textsc{F}) $\\
   $\textsc{R}(\text{int } \textit{src}, \text{int } \textit{sink}, \text{int } \textit{len}) $ 
   \begin{flalign*}
-  & \textsc{P} (x_1, \dots, x_{ar_P}) &&  & :- & && Q_{P,1}(x_1, \dots, x_{ar_P}) & \\
+  & \textsc{P} (x_1, \dots, x_{ar_P}) &&  & \assign & && Q_{P,1}(x_1, \dots, x_{ar_P}) & \\
   &  &&  & \dots & && & \\
-  & \textsc{P} (x_1, \dots, x_{ar_P}) &&  & :- & && Q_{P,m}(x_1, \dots, x_{ar_P}) & \\
-  & \textsc{R} (x_1, \dots, x_{ar_R}) &&  & :- & && Q_{R,1}(x_1, \dots, x_{ar_R}) & \\
+  & \textsc{P} (x_1, \dots, x_{ar_P}) &&  & \assign & && Q_{P,m}(x_1, \dots, x_{ar_P}) & \\
+  & \textsc{R} (x_1, \dots, x_{ar_R}) &&  & \assign & && Q_{R,1}(x_1, \dots, x_{ar_R}) & \\
   &  &&  & \dots & && & \\
-  & \textsc{R} (x_1, \dots, x_{ar_R}) &&  & :- & && Q_{R,m}(x_1, \dots, x_{ar_R}) & \\
+  & \textsc{R} (x_1, \dots, x_{ar_R}) &&  & \assign & && Q_{R,m}(x_1, \dots, x_{ar_R}) & \\
   \end{flalign*}
   \caption{Structure of a program in \datalogra.}
 }
@@ -979,9 +994,9 @@ Let $P$ be a \datalogra program, with only one \emph{idb} relation $R$ of arity 
 \narrow{
 %  $\textsc{R}(x_1, \dots, x_{k-1}, x_k [\text{ aggregate } \textsc{F}]) $\\
   \begin{flalign*}
-  & \textsc{R} (x_1, \dots, x_k) &&  & :- & && Q_1(x_1, \dots, x_k) & \\
+  & \textsc{R} (x_1, \dots, x_k) &&  & \assign & && Q_1(x_1, \dots, x_k) & \\
   &  &&  & \dots & && & \\
-  & \textsc{R} (x_1, \dots, x_k) &&  & :- & && Q_m(x_1, \dots, x_k) & \\
+  & \textsc{R} (x_1, \dots, x_k) &&  & \assign & && Q_m(x_1, \dots, x_k) & \\
   \end{flalign*}
 }
 \end{figure}
@@ -1093,13 +1108,13 @@ Let $P$ be a \datalogra program, with $w$ \emph{idb} relations $R_1, R_2, \dots,
 \narrow{
 %  $\textsc{R}(x_1, \dots, x_{k-1}, x_k [\text{ aggregate } \textsc{F}]) $\\
   \begin{flalign*}
-  & \textsc{R$_1$} (x_1, \dots, x_{k_1}) &&  & :- & && Q_{1,1}(x_1, \dots, x_{k_1}) & \\
+  & \textsc{R$_1$} (x_1, \dots, x_{k_1}) &&  & \assign & && Q_{1,1}(x_1, \dots, x_{k_1}) & \\
   &  &&  & \dots & && & \\
-  & \textsc{R$_1$} (x_1, \dots, x_{k_1}) &&  & :- & && Q_{1,{m_1}}(x_1, \dots, x_{k_1}) & \\
+  & \textsc{R$_1$} (x_1, \dots, x_{k_1}) &&  & \assign & && Q_{1,{m_1}}(x_1, \dots, x_{k_1}) & \\
   &  &&  & \dots & && & \\
-  & \textsc{R$_w$} (x_1, \dots, x_{k_w}) &&  & :- & && Q_{w, 1}(x_1, \dots, x_{k_w}) & \\
+  & \textsc{R$_w$} (x_1, \dots, x_{k_w}) &&  & \assign & && Q_{w, 1}(x_1, \dots, x_{k_w}) & \\
   &  &&  & \dots & && & \\
-  & \textsc{R$_w$} (x_1, \dots, x_{k_w}) &&  & :- & && Q_{w, {m_w}}(x_1, \dots, x_{k_w}) & \\
+  & \textsc{R$_w$} (x_1, \dots, x_{k_w}) &&  & \assign & && Q_{w, {m_w}}(x_1, \dots, x_{k_w}) & \\
   \end{flalign*}
 }
 \end{figure}
